# doomfs

./: CMakeLists.txt  README.md
docs/: index.md
include/: application.hpp  ppm_writer.hpp  readers.hpp  vertex.hpp  vulkan_application.hpp  wad.hpp
shaders/: compile.sh  shader.frag  shader.vert  vert.spv
src/: main.cpp
